Colaboratory를 통해 생성됨

--- a/kaggle/01-apple-stock-analysis.ipynb
+++ b/kaggle/01-apple-stock-analysis.ipynb
@@ -249,9 +249,330 @@
         "id": "hGz-8JZ43vPD"
       },
       "source": [
-        ""
+        "apple_data.set_index('Date',inplace=True) # Set the Date column to index"
       ],
       "id": "hGz-8JZ43vPD",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jt6lyrvPCRL9"
+      },
+      "source": [
+        "data = apple_data.drop(columns=['Volume']) # Data without volume\n",
+        "volume = apple_data['Volume'] # Volume data"
+      ],
+      "id": "Jt6lyrvPCRL9",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1h_UetyJClIt"
+      },
+      "source": [
+        "# make clustermap\n",
+        "sns.clustermap(apple_data, cmap='Blues', standard_scale=1)\n",
+        "plt.show()"
+      ],
+      "id": "1h_UetyJClIt",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MINboLulC5sY"
+      },
+      "source": [
+        "# subplot\n",
+        "apple_data.plot(subplots=True, figsize=(20, 12))\n",
+        "plt.show()"
+      ],
+      "id": "MINboLulC5sY",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TrcILxjGFXYN"
+      },
+      "source": [
+        "## Analysis on Open, High, Low, and Close from 1980 - Current Year\n",
+        "\n",
+        "1. Apple Stock in 1980 - 2000"
+      ],
+      "id": "TrcILxjGFXYN"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8a2dHTVKE12z"
+      },
+      "source": [
+        "plt.figure(figsize=(20,10))\n",
+        "sns.lineplot(data=data.loc['1980-12-12':'2000-12-31'])\n",
+        "plt.title('Apple Stocks in 1980 - 2000')\n",
+        "plt.show()"
+      ],
+      "id": "8a2dHTVKE12z",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LzyMSDv1GRnT"
+      },
+      "source": [
+        "2. Apple Stock in 2001 - 2010"
+      ],
+      "id": "LzyMSDv1GRnT"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yiCs9uEdFY7K"
+      },
+      "source": [
+        "plt.figure(figsize=(20,10))\n",
+        "sns.lineplot(data=data.loc['2001-01-01':'2010-12-31'])\n",
+        "plt.title('Apple Stocks in 2001 - 2010')\n",
+        "plt.show()"
+      ],
+      "id": "yiCs9uEdFY7K",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Io-f0GoeGwBZ"
+      },
+      "source": [
+        "3. Apple Stock in 2010 - Current Year"
+      ],
+      "id": "Io-f0GoeGwBZ"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UBboMbW0G3_D"
+      },
+      "source": [
+        "plt.figure(figsize=(20,10))\n",
+        "sns.lineplot(data=data.loc['2011-01-01':])\n",
+        "plt.title('Apple Stocks in 2011 - Current Year')\n",
+        "plt.show()"
+      ],
+      "id": "UBboMbW0G3_D",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TOeZB8eUHOqO"
+      },
+      "source": [
+        "4. Okay, Let's see the Overall Apple Stocks"
+      ],
+      "id": "TOeZB8eUHOqO"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CPl1g5OLHPhU"
+      },
+      "source": [
+        "plt.figure(figsize=(20,10))\n",
+        "sns.lineplot(data=data, linewidth=1)\n",
+        "plt.title('Overall Apple Stocks')\n",
+        "plt.show()"
+      ],
+      "id": "CPl1g5OLHPhU",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gGARP4AtHh7R"
+      },
+      "source": [
+        "## Analysis on Volume 1980 - Current Year"
+      ],
+      "id": "gGARP4AtHh7R"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VgOOn4q5Hjap"
+      },
+      "source": [
+        "plt.figure(figsize=(20,10))\n",
+        "sns.lineplot(data=volume.loc['1980-12-12':'2000-12-31'])\n",
+        "plt.title('Apple Volume in 1980 - 2000')\n",
+        "plt.show()"
+      ],
+      "id": "VgOOn4q5Hjap",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TT9EZ5J4HuUf"
+      },
+      "source": [
+        "2. Apple Volume in 2001 - 2010"
+      ],
+      "id": "TT9EZ5J4HuUf"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n-tAydfcHveJ"
+      },
+      "source": [
+        "plt.figure(figsize=(20,10))\n",
+        "sns.lineplot(data=volume.loc['2001-01-01':'2010-12-31'])\n",
+        "plt.title('Apple Volume Stocks in 2001 - 2010')\n",
+        "plt.show()"
+      ],
+      "id": "n-tAydfcHveJ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EIt9LU_-H_vR"
+      },
+      "source": [
+        "3. Apple Volume in 2011 - Current Year"
+      ],
+      "id": "EIt9LU_-H_vR"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G6L3MV-AHzxA"
+      },
+      "source": [
+        "plt.figure(figsize=(20,10))\n",
+        "sns.lineplot(data=volume.loc['2011-01-01':])\n",
+        "plt.title('Apple Volume Stocks in 2011 - Current Year')\n",
+        "plt.show()"
+      ],
+      "id": "G6L3MV-AHzxA",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k69wgh6YIQ-I"
+      },
+      "source": [
+        "4. Okay, Let's see the Overall Apple Volume"
+      ],
+      "id": "k69wgh6YIQ-I"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9E1APKGgHnTU"
+      },
+      "source": [
+        "plt.figure(figsize=(20,10))\n",
+        "sns.lineplot(data=volume, linewidth=1)\n",
+        "plt.title('Overall Apple Volume')\n",
+        "plt.show()"
+      ],
+      "id": "9E1APKGgHnTU",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GjqaQY4uIiXc"
+      },
+      "source": [
+        "## Let's try the Area Plots\n",
+        "1. Apple Stocks"
+      ],
+      "id": "GjqaQY4uIiXc"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_j8bSF6yIU-i"
+      },
+      "source": [
+        "fig, ax = plt.subplots(figsize=(20, 6))\n",
+        "data.loc['1980-12-12':'2010-12-31'].plot(kind='area', ax=ax, stacked=False)\n",
+        "plt.title('Apple Stocks in 1980 - 2010')\n",
+        "plt.show()"
+      ],
+      "id": "_j8bSF6yIU-i",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "leT9yzIUGgRE"
+      },
+      "source": [
+        "fig, ax = plt.subplots(figsize=(20, 6))\n",
+        "data.loc['2011-01-01':].plot(kind='area', ax=ax, stacked=False)\n",
+        "plt.title('Apple Stocks in 2011 - Current Year')\n",
+        "plt.show()"
+      ],
+      "id": "leT9yzIUGgRE",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Suq1jzmRJPyX"
+      },
+      "source": [
+        "2. Apple Volume"
+      ],
+      "id": "Suq1jzmRJPyX"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AT5L1uMLJJL3"
+      },
+      "source": [
+        "fig, ax = plt.subplots(figsize=(20, 6))\n",
+        "volume.plot(kind='area', ax=ax, stacked=False)\n",
+        "plt.title('Apple Stocks in 1980 - Current Year')\n",
+        "plt.show()"
+      ],
+      "id": "AT5L1uMLJJL3",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tHev_6GEJUzr"
+      },
+      "source": [
+        ""
+      ],
+      "id": "tHev_6GEJUzr",
       "execution_count": null,
       "outputs": []
     }
