--- a/codeit/13-02-get-neighbor.ipynb
+++ b/codeit/13-02-get-neighbor.ipynb
@@ -72,23 +72,23 @@
         "rating_data = pd.read_csv(RATING_DATA_PATH, index_col='user_id').values  # 평점 데이터를 불러온다"
       ],
       "id": "SYZVG4i-xgQs",
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ekXARBfSxiVy",
-        "outputId": "181141f4-dd28-4e45-b03f-a86f7ceb7466",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "484a25ea-4f63-49a0-99cb-dcef9409f64c"
       },
       "source": [
         "rating_data.shape"
       ],
       "id": "ekXARBfSxiVy",
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,7 +98,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 11
         }
       ]
     },
@@ -129,7 +129,7 @@
         "    return filled_data"
       ],
       "id": "c6A4hhgFws0F",
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -145,8 +145,11 @@
         "    distance_data = np.append(distance_data, np.zeros((distance_data.shape[0], 1)), axis=1)\n",
         "    \n",
         "    # 코드를 쓰세요.\n",
-        "    for data in range(len(di)):\n",
-        "\n",
+        "    for i in range(len(distance_data)):\n",
+        "      if user_id == i:  # 해당 유저 데이터인 경우 유클리드 거리를 np.inf로 설정\n",
+        "        distance_data[i,-1] = np.inf\n",
+        "      else:  \n",
+        "        distance_data[i,-1] = distance(distance_data[i,:-1], distance_data[user_id,:-1])\n",
         "\n",
         "    \n",
         "    # 데이터를 거리 열을 기준으로 정렬한다\n",
@@ -156,24 +159,59 @@
         "    return distance_data[:k, :-1]"
       ],
       "id": "30dxHmEPog-b",
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XUT7XVs-w4ar"
+        "id": "XUT7XVs-w4ar",
+        "outputId": "6d7efeb6-8a73-49eb-de00-8be0ed446783",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# 실행 코드\n",
         "# 영화 3을 본 유저들 중, 유저 0와 비슷한 유저 5명을 찾는다\n",
-        "rating_data = pd.read_csv(RATING_DATA_PATH, index_col='user_id').values  # 평점 데이터를 불러온다\n",
         "filtered_data = filter_users_without_movie(rating_data, 3)  # 3 번째 영화를 보지 않은 유저를 데이터에서 미리 제외시킨다\n",
         "filled_data = fill_nan_with_user_mean(filtered_data)  # 빈값들이 채워진 새로운 행렬을 만든다\n",
         "user_0_neighbors = get_k_neighbors(0, filled_data, 5)  # 유저 0과 비슷한 5개의 유저 데이터를 찾는다\n",
         "user_0_neighbors"
       ],
       "id": "XUT7XVs-w4ar",
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2.  , 3.5 , 1.33, 5.  , 3.25, 4.  , 2.  , 2.  , 2.  , 2.25, 3.  ,\n",
+              "        4.  , 2.  , 5.  , 4.  , 3.5 , 2.33, 3.67, 4.  , 2.  ],\n",
+              "       [2.  , 5.  , 1.  , 4.  , 3.25, 4.  , 2.  , 3.  , 1.  , 2.25, 1.  ,\n",
+              "        2.33, 2.71, 4.  , 2.5 , 3.5 , 2.  , 3.67, 3.14, 4.  ],\n",
+              "       [2.  , 3.5 , 2.  , 5.  , 3.25, 4.  , 2.  , 3.2 , 2.33, 2.25, 2.2 ,\n",
+              "        2.33, 1.  , 3.33, 2.5 , 3.5 , 3.  , 1.  , 5.  , 2.  ],\n",
+              "       [3.  , 3.5 , 1.33, 5.  , 4.  , 4.  , 2.  , 4.  , 5.  , 3.  , 2.2 ,\n",
+              "        1.  , 2.  , 1.  , 1.  , 3.5 , 2.33, 3.67, 4.  , 2.6 ],\n",
+              "       [1.  , 1.  , 1.33, 1.  , 1.  , 4.  , 2.  , 3.2 , 2.33, 2.25, 2.2 ,\n",
+              "        2.  , 2.71, 3.33, 1.  , 3.5 , 2.33, 3.67, 4.  , 2.6 ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uyMFgjTM6Err"
+      },
+      "source": [
+        ""
+      ],
+      "id": "uyMFgjTM6Err",
       "execution_count": null,
       "outputs": []
     }
