--- a/codeit/13-02-get-neighbor.ipynb
+++ b/codeit/13-02-get-neighbor.ipynb
@@ -47,7 +47,7 @@
         "from math import sqrt"
       ],
       "id": "RK3QTbWDofS7",
-      "execution_count": 1,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -60,7 +60,7 @@
         "np.set_printoptions(precision=2)  # 소수점 둘째 자리까지만 출력"
       ],
       "id": "ADWozGj4wnpX",
-      "execution_count": 2,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
         "rating_data = pd.read_csv(RATING_DATA_PATH, index_col='user_id').values  # 평점 데이터를 불러온다"
       ],
       "id": "SYZVG4i-xgQs",
-      "execution_count": 3,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -82,13 +82,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "484a25ea-4f63-49a0-99cb-dcef9409f64c"
+        "outputId": "44a2a9c0-f616-4237-cd4f-53b3a9a0226c"
       },
       "source": [
         "rating_data.shape"
       ],
       "id": "ekXARBfSxiVy",
-      "execution_count": 11,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,7 +98,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 25
         }
       ]
     },
@@ -129,7 +129,7 @@
         "    return filled_data"
       ],
       "id": "c6A4hhgFws0F",
-      "execution_count": 5,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -145,12 +145,18 @@
         "    distance_data = np.append(distance_data, np.zeros((distance_data.shape[0], 1)), axis=1)\n",
         "    \n",
         "    # 코드를 쓰세요.\n",
-        "    for i in range(len(distance_data)):\n",
-        "      if user_id == i:  # 해당 유저 데이터인 경우 유클리드 거리를 np.inf로 설정\n",
-        "        distance_data[i,-1] = np.inf\n",
-        "      else:  \n",
-        "        distance_data[i,-1] = distance(distance_data[i,:-1], distance_data[user_id,:-1])\n",
+        "    # for i in range(len(distance_data)):\n",
+        "    #   if user_id == i:  # 해당 유저 데이터인 경우 유클리드 거리를 np.inf로 설정\n",
+        "    #     distance_data[i,-1] = np.inf\n",
+        "    #   else:  \n",
+        "    #     distance_data[i,-1] = distance(distance_data[user_id,:-1], distance_data[i,:-1] )\n",
         "\n",
+        "    for i in range(len(distance_data)):\n",
+        "        row = distance_data[i]\n",
+        "        if i == user_id:  # 같은 유저면 거리를 무한대로 설정\n",
+        "            row[-1] = np.inf\n",
+        "        else:  # 다른 유저면 마지막 열에 거리 데이터를 저장\n",
+        "            row[-1] = distance(distance_data[user_id][:-1], row[:-1])\n",
         "    \n",
         "    # 데이터를 거리 열을 기준으로 정렬한다\n",
         "    distance_data = distance_data[np.argsort(distance_data[:, -1])]\n",
@@ -159,17 +165,17 @@
         "    return distance_data[:k, :-1]"
       ],
       "id": "30dxHmEPog-b",
-      "execution_count": 13,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "XUT7XVs-w4ar",
-        "outputId": "6d7efeb6-8a73-49eb-de00-8be0ed446783",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c8e809c7-bf79-41a5-f2ef-f2d56d408558"
       },
       "source": [
         "# 실행 코드\n",
@@ -180,7 +186,7 @@
         "user_0_neighbors"
       ],
       "id": "XUT7XVs-w4ar",
-      "execution_count": 14,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -199,7 +205,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 28
         }
       ]
     },
@@ -212,7 +218,7 @@
         ""
       ],
       "id": "uyMFgjTM6Err",
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     }
   ]
