Colaboratory를 통해 생성됨

--- a/codeit/13-02-get-neighbor.ipynb
+++ b/codeit/13-02-get-neighbor.ipynb
@@ -47,7 +47,7 @@
         "from math import sqrt"
       ],
       "id": "RK3QTbWDofS7",
-      "execution_count": 22,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -60,7 +60,7 @@
         "np.set_printoptions(precision=2)  # 소수점 둘째 자리까지만 출력"
       ],
       "id": "ADWozGj4wnpX",
-      "execution_count": 23,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
         "rating_data = pd.read_csv(RATING_DATA_PATH, index_col='user_id').values  # 평점 데이터를 불러온다"
       ],
       "id": "SYZVG4i-xgQs",
-      "execution_count": 24,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -82,13 +82,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "44a2a9c0-f616-4237-cd4f-53b3a9a0226c"
+        "outputId": "ca298aee-ae47-42b1-b7da-2f9f8c915821"
       },
       "source": [
         "rating_data.shape"
       ],
       "id": "ekXARBfSxiVy",
-      "execution_count": 25,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,7 +98,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 41
         }
       ]
     },
@@ -129,7 +129,7 @@
         "    return filled_data"
       ],
       "id": "c6A4hhgFws0F",
-      "execution_count": 26,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
         "    return distance_data[:k, :-1]"
       ],
       "id": "30dxHmEPog-b",
-      "execution_count": 27,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -175,7 +175,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c8e809c7-bf79-41a5-f2ef-f2d56d408558"
+        "outputId": "faed7a8b-92c9-4478-8bc4-a3d9b66c9613"
       },
       "source": [
         "# 실행 코드\n",
@@ -186,7 +186,7 @@
         "user_0_neighbors"
       ],
       "id": "XUT7XVs-w4ar",
-      "execution_count": 28,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 44
         }
       ]
     },
@@ -215,11 +215,52 @@
         "id": "uyMFgjTM6Err"
       },
       "source": [
-        ""
+        "def predict_user_rating(rating_data, k, user_id, movie_id,):\n",
+        "    \"\"\"예측 행렬에 따라 유저의 영화 평점 예측 값 구하기\"\"\"\n",
+        "    # movie_id 번째 영화를 보지 않은 유저를 데이터에서 미리 제외시킨다\n",
+        "    filtered_data = filter_users_without_movie(rating_data, movie_id)\n",
+        "    # 빈값들이 채워진 새로운 행렬을 만든다\n",
+        "    filled_data = fill_nan_with_user_mean(filtered_data)\n",
+        "    # 유저 user_id와 비슷한 k개의 유저 데이터를 찾는다\n",
+        "    neighbors = get_k_neighbors(user_id, filled_data, k)\n",
+        "    \n",
+        "    # 코드를 쓰세요\n",
+        "    return np.mean(neighbors[:,movie_id])"
       ],
       "id": "uyMFgjTM6Err",
-      "execution_count": 28,
+      "execution_count": 45,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-B5Q3inV-mOe",
+        "outputId": "96a3432d-d822-420b-d7fa-90adc76aacd8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 실행 코드   \n",
+        "# 평점 데이터를 불러온다\n",
+        "rating_data = pd.read_csv(RATING_DATA_PATH, index_col='user_id').values\n",
+        "# 5개의 이웃들을 써서 유저 0의 영화 3에 대한 예측 평점 구하기\n",
+        "predict_user_rating(rating_data, 5, 0, 3)  "
+      ],
+      "id": "-B5Q3inV-mOe",
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
     }
   ]
 }
