Colaboratory를 통해 생성됨

--- a/kaggle/01-data-analysis-for-titanic-by-pclass.ipynb
+++ b/kaggle/01-data-analysis-for-titanic-by-pclass.ipynb
@@ -41,36 +41,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tHev_6GEJUzr",
-        "outputId": "b2318462-bf76-40b9-ea99-c42063d1c396",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "tHev_6GEJUzr"
       },
       "source": [
         "! pip install kaggle"
       ],
       "id": "tHev_6GEJUzr",
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: kaggle in /usr/local/lib/python3.7/dist-packages (1.5.12)\n",
-            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.7/dist-packages (from kaggle) (2.8.2)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from kaggle) (2021.5.30)\n",
-            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.7/dist-packages (from kaggle) (1.24.3)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from kaggle) (2.23.0)\n",
-            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.7/dist-packages (from kaggle) (5.0.2)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from kaggle) (4.62.3)\n",
-            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.7/dist-packages (from kaggle) (1.15.0)\n",
-            "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.7/dist-packages (from python-slugify->kaggle) (1.3)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle) (2.10)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->kaggle) (3.0.4)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -81,7 +59,7 @@
         "! mkdir ~/.kaggle"
       ],
       "id": "nRfxbrGX_DtN",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,10 +68,12 @@
         "id": "Un-E2d49_D1f"
       },
       "source": [
+        "# kaggle에서 로그인하여 계정에서 Account 탭에서 API -> Create New API Token을 다운로드하여 colab에 업로드 후 아래 실행\n",
+        "\n",
         "! cp kaggle.json ~/.kaggle/"
       ],
       "id": "Un-E2d49_D1f",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,21 +85,18 @@
         "! chmod 600 ~/.kaggle/kaggle.json"
       ],
       "id": "MA7OTOy2_D5P",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "VcFHTPP9ABQk"
+        "id": "HB4NWPPLCcms"
       },
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        ""
       ],
-      "id": "VcFHTPP9ABQk",
-      "execution_count": null,
-      "outputs": []
+      "id": "HB4NWPPLCcms"
     },
     {
       "cell_type": "code",
@@ -127,7 +104,9 @@
         "id": "v0c4RrIr_D8n"
       },
       "source": [
-        ""
+        "# Kaggle Competititions에서 과제 검색 -> Data에서 복사하여 실행\n",
+        "\n",
+        "! kaggle competitions download -c titanic"
       ],
       "id": "v0c4RrIr_D8n",
       "execution_count": null,
@@ -156,7 +135,166 @@
         "%matplotlib inline"
       ],
       "id": "5MuWRG1g-SP0",
-      "execution_count": 2,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MUicbWWXD_Co"
+      },
+      "source": [
+        "df_train = pd.read_csv('train.csv')\n",
+        "df_test = pd.read_csv('test.csv')"
+      ],
+      "id": "MUicbWWXD_Co",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dB2PGFwiEFxP"
+      },
+      "source": [
+        "for col in df_train.columns:\n",
+        "    print('column: {:>10}\\t Percent of NaN value: {:.2f}%'.format(col, 100*df_train[col].isnull().sum()/df_train[col].shape[0]))"
+      ],
+      "id": "dB2PGFwiEFxP",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E5Neq64QEJGn"
+      },
+      "source": [
+        "for col in df_test.columns:\n",
+        "    print('column: {:>10}\\t Percent of NaN value: {:.2f}%'.format(col, 100*df_test[col].isnull().sum()/df_test[col].shape[0]))"
+      ],
+      "id": "E5Neq64QEJGn",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ep06HuN8EPN_"
+      },
+      "source": [
+        "msno.matrix(df=df_train.iloc[:,:], figsize=(8,8), color=(0.8,0.5,0.2))"
+      ],
+      "id": "ep06HuN8EPN_",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RdxXsfPZETlO"
+      },
+      "source": [
+        "msno.bar(df=df_train, figsize=(8,8), color=(0.8,0.5,0.2))"
+      ],
+      "id": "RdxXsfPZETlO",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KLp-fPLYFNZH"
+      },
+      "source": [
+        "f, ax = plt.subplots(1, 2, figsize=(18,8))\n",
+        "df_train['Survived'].value_counts().plot.pie(ax=ax[0], explode=[0,0.05], autopct='%.1f%%', shadow=True)\n",
+        "ax[0].set_title('Pie plot - Survived')\n",
+        "ax[0].set_ylabel('')\n",
+        "sns.countplot('Survived', data=df_train, ax=ax[1])\n",
+        "ax[1].set_title('Count plot - Survived')\n",
+        "plt.show()"
+      ],
+      "id": "KLp-fPLYFNZH",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zW_wSEj1Fgcd"
+      },
+      "source": [
+        "## 2.1 Pclass"
+      ],
+      "id": "zW_wSEj1Fgcd"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r9Af43FuFlFz"
+      },
+      "source": [
+        "df_train[['Pclass', 'Survived']].groupby('Pclass').count()"
+      ],
+      "id": "r9Af43FuFlFz",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AXFvhv6bFnuf"
+      },
+      "source": [
+        "df_train[['Pclass', 'Survived']].groupby('Pclass').sum()"
+      ],
+      "id": "AXFvhv6bFnuf",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "thco1PwDFpXl"
+      },
+      "source": [
+        "df_train['Survived'].unique()"
+      ],
+      "id": "thco1PwDFpXl",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dMJ1UIL2FrE7"
+      },
+      "source": [
+        "pd.crosstab(df_train['Pclass'], df_train['Survived'], margins=True).style.background_gradient(cmap='cool')"
+      ],
+      "id": "dMJ1UIL2FrE7",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dObhcFTlFtF9"
+      },
+      "source": [
+        "y_position = 1.02\n",
+        "f, ax = plt.subplots(1,2,figsize=(18,8))\n",
+        "df_train['Pclass'].value_counts().plot.bar(color=['#CD7F32', '#FFDF00', '#D3D3D3'], ax=ax[0])\n",
+        "ax[0].set_title('Number of passenger by Plcass')\n",
+        "ax[0].set_ylabel('Count')\n",
+        "sns.countplot('Pclass', hue='Survived', data=df_train, ax=ax[1])\n",
+        "ax[1].set_title('Pclass: Survived vs Dead')\n",
+        "ax[1].set_ylabel('Count')\n",
+        "plt.show()"
+      ],
+      "id": "dObhcFTlFtF9",
+      "execution_count": null,
       "outputs": []
     }
   ]
