Colaboratory를 통해 생성됨

--- a/kaggle/02-data-analysis-for-titanic-by-pclass-sex.ipynb
+++ b/kaggle/02-data-analysis-for-titanic-by-pclass-sex.ipynb
@@ -386,12 +386,24 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NCQyBB4fRQea"
+      },
+      "source": [
+        "## Age"
+      ],
+      "id": "NCQyBB4fRQea"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "yaseeGPj9Jea"
       },
       "source": [
-        ""
+        "print(\"제일 나이 많은 탑승객: {:.1f} year\".format(df_train['Age'].max()))\n",
+        "print(\"제일 나이 어린 탑승객: {:.1f} year\".format(df_train['Age'].min()))\n",
+        "print(\"평균 탑승객 나이: {:.1f} year\".format(df_train['Age'].mean()))"
       ],
       "id": "yaseeGPj9Jea",
       "execution_count": null,
