Colaboratory를 통해 생성됨

--- a/kaggle/02-data-analysis-for-titanic-by-pclass-sex.ipynb
+++ b/kaggle/02-data-analysis-for-titanic-by-pclass-sex.ipynb
@@ -415,9 +415,41 @@
         "id": "N8UgTc9C_cAV"
       },
       "source": [
-        ""
+        "fig, ax = plt.subplots(1,1, figsize=(9,5))\n",
+        "sns.kdeplot(df_train[df_train['Survived']==1]['Age'], ax=ax)\n",
+        "sns.kdeplot(df_train[df_train['Survived']==0]['Age'], ax=ax)\n",
+        "plt.legend(['Survived == 1', 'Survived == 0'])\n",
+        "plt.show()"
       ],
       "id": "N8UgTc9C_cAV",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XZe0LWj65C8m"
+      },
+      "source": [
+        "## PClass"
+      ],
+      "id": "XZe0LWj65C8m"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FeaetSdL5Cm_"
+      },
+      "source": [
+        "plt.figure(figsize=(8,9))\n",
+        "df_train[df_train['Pclass']==1]['Age'].plot(kind='kde')\n",
+        "df_train[df_train['Pclass']==2]['Age'].plot(kind='kde')\n",
+        "df_train[df_train['Pclass']==3]['Age'].plot(kind='kde')\n",
+        "plt.xlabel(\"Age\")\n",
+        "plt.legend(['1st class', '2nd class', '3rd class'])\n",
+        "plt.show()"
+      ],
+      "id": "FeaetSdL5Cm_",
       "execution_count": null,
       "outputs": []
     },
@@ -427,7 +459,13 @@
         "id": "N9oAgbkM_cDc"
       },
       "source": [
-        ""
+        "plt.figure(figsize=(8,9))\n",
+        "df_train[(df_train['Pclass']==1) & (df_train['Survived'] == 1)]['Age'].plot(kind='kde')\n",
+        "df_train[(df_train['Pclass']==2) & (df_train['Survived'] == 1)]['Age'].plot(kind='kde')\n",
+        "df_train[(df_train['Pclass']==3) & (df_train['Survived'] == 1)]['Age'].plot(kind='kde')\n",
+        "plt.xlabel(\"Age\")\n",
+        "plt.legend(['1st class', '2nd class', '3rd class'])\n",
+        "plt.show()"
       ],
       "id": "N9oAgbkM_cDc",
       "execution_count": null,
@@ -439,7 +477,17 @@
         "id": "JEiWRpWO_cGo"
       },
       "source": [
-        ""
+        "change_age_range_survival_ratio = []\n",
+        "\n",
+        "for i in range(1, 80):\n",
+        "  change_age_range_survival_ratio.append(df_train[df_train['Age'] < i]['Survived'].sum() / len(df_train[df_train['Age'] < i]['Survived']))\n",
+        "\n",
+        "plt.figure(figsize=(7,7))\n",
+        "plt.plot(change_age_range_survival_ratio)\n",
+        "plt.title('Survival ratio change depending on range of Age', y=1.02)\n",
+        "plt.ylabel('Survival rate')\n",
+        "plt.xlabel('Range of Age(0~x)')\n",
+        "plt.show()"
       ],
       "id": "JEiWRpWO_cGo",
       "execution_count": null,
