Colaboratory를 통해 생성됨

--- a/kaggle/02-data-analysis-for-titanic-by-pclass-sex.ipynb
+++ b/kaggle/02-data-analysis-for-titanic-by-pclass-sex.ipynb
@@ -494,14 +494,43 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1BlFTP-Bdy4K"
+      },
+      "source": [
+        "# Pclass, Sex, Age"
+      ],
+      "id": "1BlFTP-Bdy4K"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "wiCjQr8x_cJc"
       },
       "source": [
-        ""
+        "fig, ax = plt.subplots(1,2,figsize=(18,8))\n",
+        "sns.violinplot('Pclass', 'Age', hue='Survived', data=df_train, scale='count', split=True, ax=ax[0])\n",
+        "ax[0].set_title('Pclass and Age vs Survived')\n",
+        "ax[0].set_yticks(range(0,100,10))\n",
+        "\n",
+        "sns.violinplot('Sex', 'Age', hue='Survived', data=df_train, scale='count', split=True, ax=ax[1])\n",
+        "ax[1].set_title('Sex and Age vs Survived')\n",
+        "ax[1].set_yticks(range(0,100,10))"
       ],
       "id": "wiCjQr8x_cJc",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kMr7NeXXdw3W"
+      },
+      "source": [
+        ""
+      ],
+      "id": "kMr7NeXXdw3W",
       "execution_count": null,
       "outputs": []
     },
