Colaboratory를 통해 생성됨

--- a/kaggle/02-data-analysis-for-titanic-by-pclass-sex.ipynb
+++ b/kaggle/02-data-analysis-for-titanic-by-pclass-sex.ipynb
@@ -523,12 +523,23 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zF5EdOv9zA9B"
+      },
+      "source": [
+        "## Embarked"
+      ],
+      "id": "zF5EdOv9zA9B"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "kMr7NeXXdw3W"
       },
       "source": [
-        ""
+        "f, ax = plt.subplots(1,1, figsize=(7,7))\n",
+        "df_train[['Embarked', 'Survived']].groupby('Embarked', as_index=True).mean().sort_values(by='Survived', ascending=False).plot.bar(ax=ax)"
       ],
       "id": "kMr7NeXXdw3W",
       "execution_count": null,
@@ -540,23 +551,35 @@
         "id": "MmlOVOJJ_cMV"
       },
       "source": [
-        ""
+        "f, ax = plt.subplots(2,2,figsize=(20,10))\n",
+        "sns.countplot('Embarked', data=df_train, ax=ax[0,0])\n",
+        "ax[0,0].set_title('(1) No. of Passengers Boared')\n",
+        "\n",
+        "sns.countplot('Embarked', hue='Sex', data=df_train, ax=ax[0,1])\n",
+        "ax[0,1].set_title('(2) Male vs Female for embarked')\n",
+        "\n",
+        "sns.countplot('Embarked', hue='Survived', data=df_train, ax=ax[1,0])\n",
+        "ax[1,0].set_title('(3) Embarked vs Survived')\n",
+        "\n",
+        "sns.countplot('Embarked', hue='Pclass', data=df_train, ax=ax[1,1])\n",
+        "ax[1,1].set_title('(4) Pclass vs Survived')\n",
+        "\n",
+        "plt.subplots_adjust(wspace=0.2, hspace=0.5)\n",
+        "plt.show()"
       ],
       "id": "MmlOVOJJ_cMV",
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "M6reUJap9Jha"
+        "id": "fvCCIaYJL4dh"
       },
       "source": [
-        ""
+        "## Family = SibSp + Parch"
       ],
-      "id": "M6reUJap9Jha",
-      "execution_count": null,
-      "outputs": []
+      "id": "fvCCIaYJL4dh"
     },
     {
       "cell_type": "code",
@@ -564,9 +587,56 @@
         "id": "1-_C4yEX9JkK"
       },
       "source": [
-        ""
+        "df_train['Family'] = df_train['SibSp'] + df_train['Parch'] + 1"
       ],
       "id": "1-_C4yEX9JkK",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0k3FJNUWMOIN"
+      },
+      "source": [
+        "df_train.head()"
+      ],
+      "id": "0k3FJNUWMOIN",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zTdSCbV4MRE1"
+      },
+      "source": [
+        "f, ax = plt.subplots(1,3,figsize=(40,10))\n",
+        "sns.countplot('Family', data=df_train, ax=ax[0])\n",
+        "ax[0].set_title('(1) No. of Passanger')\n",
+        "\n",
+        "sns.countplot('Family', hue='Survived', data=df_train, ax=ax[1])\n",
+        "ax[1].set_title('(2) Family vs Survived')\n",
+        "\n",
+        "df_train[['Family', 'Survived']].groupby('Family', as_index=True).mean().sort_values('Survived', ascending=False).plot.bar(ax=ax[2])\n",
+        "ax[2].set_title('Survived rate depending on Family Size')\n",
+        "\n",
+        "plt.subplots_adjust(wspace=0.2, hspace=0.5)\n",
+        "plt.show()"
+      ],
+      "id": "zTdSCbV4MRE1",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lh_ct0S_M6Fe"
+      },
+      "source": [
+        ""
+      ],
+      "id": "lh_ct0S_M6Fe",
       "execution_count": null,
       "outputs": []
     }
