Colaboratory를 통해 생성됨

--- a/kaggle/02-data-analysis-for-titanic-by-pclass-sex.ipynb
+++ b/kaggle/02-data-analysis-for-titanic-by-pclass-sex.ipynb
@@ -629,14 +629,64 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JOHTj60J6OhO"
+      },
+      "source": [
+        "## Fare"
+      ],
+      "id": "JOHTj60J6OhO"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9Cj5VFP56Ndg"
+      },
+      "source": [
+        "fig, ax = plt.subplots(1,1,figsize=(8,8))\n",
+        "g = sns.distplot(df_train['Fare'], color='b', label='Skewness: {:.2f}'.format(df_train['Fare'].skew()), ax=ax)\n",
+        "g = g.legend(loc='best')"
+      ],
+      "id": "9Cj5VFP56Ndg",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EwT3qlua62rX"
+      },
+      "source": [
+        "df_train['skew_fare'] = df_train['Fare'].map(lambda i : np.log(i) if i > 0 else 0)"
+      ],
+      "id": "EwT3qlua62rX",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "lh_ct0S_M6Fe"
       },
       "source": [
-        ""
+        "fig, ax = plt.subplots(1,1,figsize=(8,8))\n",
+        "g = sns.distplot(df_train['skew_fare'], color='b', label='Skewness: {:.2f}'.format(df_train['skew_fare'].skew()), ax=ax)\n",
+        "g = g.legend(loc='best')"
       ],
       "id": "lh_ct0S_M6Fe",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-h-Z5IBk76By"
+      },
+      "source": [
+        ""
+      ],
+      "id": "-h-Z5IBk76By",
       "execution_count": null,
       "outputs": []
     }
