Colaboratory를 통해 생성됨

--- a/kaggle/03-feature-engineering.ipynb
+++ b/kaggle/03-feature-engineering.ipynb
@@ -363,12 +363,48 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "df_train['Embarked'].isnull().sum()\n"
       ],
       "metadata": {
         "id": "qO3sdfOq3kSi"
       },
       "id": "qO3sdfOq3kSi",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train['Embarked'].fillna('S', inplace=True)"
+      ],
+      "metadata": {
+        "id": "ugyH4wGnEUul"
+      },
+      "id": "ugyH4wGnEUul",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train['Embarked'].isnull().sum()"
+      ],
+      "metadata": {
+        "id": "uaZ6vLktEfvW"
+      },
+      "id": "uaZ6vLktEfvW",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "q-zwnF03E1pS"
+      },
+      "id": "q-zwnF03E1pS",
       "execution_count": null,
       "outputs": []
     }
