--- a/kaggle/03-feature-engineering.ipynb
+++ b/kaggle/03-feature-engineering.ipynb
@@ -153,6 +153,19 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "df_train['Family'] = df_train['SibSp'] + df_train['Parch'] + 1\n",
+        "df_test['Family'] = df_test['SibSp'] + df_test['Parch'] + 1"
+      ],
+      "metadata": {
+        "id": "NLQR0rhFUw2d"
+      },
+      "id": "NLQR0rhFUw2d",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "dB2PGFwiEFxP"
       },
@@ -399,12 +412,253 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def category_age(x):\n",
+        "  if x < 10:\n",
+        "    return 0\n",
+        "  elif x < 20:\n",
+        "    return 1\n",
+        "  elif x < 30:\n",
+        "    return 2\n",
+        "  elif x < 40:\n",
+        "    return 3\n",
+        "  elif x < 50:\n",
+        "    return 4\n",
+        "  elif x < 60:\n",
+        "    return 5\n",
+        "  elif x < 70:\n",
+        "    return 6\n",
+        "  else:\n",
+        "    return 7"
       ],
       "metadata": {
         "id": "q-zwnF03E1pS"
       },
       "id": "q-zwnF03E1pS",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train['age_cat'] = 0\n",
+        "df_test['age_cat'] = 0"
+      ],
+      "metadata": {
+        "id": "USOKXtPHHCMY"
+      },
+      "id": "USOKXtPHHCMY",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train['age_cat'] = df_train['Age'].apply(category_age)\n",
+        "df_test['age_cat'] = df_test['Age'].apply(category_age)"
+      ],
+      "metadata": {
+        "id": "nnQPveq1H0LE"
+      },
+      "id": "nnQPveq1H0LE",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train.head()"
+      ],
+      "metadata": {
+        "id": "F5i_s1DHIFXN"
+      },
+      "id": "F5i_s1DHIFXN",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "8RMUzfdYQlZP"
+      },
+      "id": "8RMUzfdYQlZP",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train.initial.unique()"
+      ],
+      "metadata": {
+        "id": "P7yhEgc2IHox"
+      },
+      "id": "P7yhEgc2IHox",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train.initial = df_train['initial'].map({'Master':0, 'Miss':1, 'Mr':2, 'Mrs':3, 'Other':4})\n",
+        "df_test.iniitial = df_test['initial'].map({'Master':0, 'Miss':1, 'Mr':2, 'Mrs':3, 'Other':4})"
+      ],
+      "metadata": {
+        "id": "pubrbh0dIuM_"
+      },
+      "id": "pubrbh0dIuM_",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train['initial']"
+      ],
+      "metadata": {
+        "id": "M7sR1c1oKVK3"
+      },
+      "id": "M7sR1c1oKVK3",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train.Embarked.unique()"
+      ],
+      "metadata": {
+        "id": "CfCgre6-K6Be"
+      },
+      "id": "CfCgre6-K6Be",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train.Embarked.value_counts()"
+      ],
+      "metadata": {
+        "id": "H7J4h7L9L8wF"
+      },
+      "id": "H7J4h7L9L8wF",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train.Embarked = df_train.Embarked.map({'C':0, 'Q':1, 'S':2})\n",
+        "df_test.Embarked = df_test.Embarked.map({'C':0, 'Q':1, 'S':2})"
+      ],
+      "metadata": {
+        "id": "lOk6GdJCKH4B"
+      },
+      "id": "lOk6GdJCKH4B",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train.Embarked.isnull().any()"
+      ],
+      "metadata": {
+        "id": "94sSYKVdMown"
+      },
+      "id": "94sSYKVdMown",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train['Sex'].unique()"
+      ],
+      "metadata": {
+        "id": "rJlE1KXyMZ-D"
+      },
+      "id": "rJlE1KXyMZ-D",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train.Sex = df_train.Sex.map({'female':0, 'male':1})\n",
+        "df_test.Sex = df_test.Sex.map({'female':0, 'male':1})"
+      ],
+      "metadata": {
+        "id": "KE0p8fq7M2GQ"
+      },
+      "id": "KE0p8fq7M2GQ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train.head()"
+      ],
+      "metadata": {
+        "id": "86M6oeBvNH8x"
+      },
+      "id": "86M6oeBvNH8x",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "heatmap_data = df_train[['Survived', 'Pclass', 'Sex', 'Embarked', 'initial', 'Family', 'age_cat', 'Fare']]"
+      ],
+      "metadata": {
+        "id": "uvuPs4iOQ3Lq"
+      },
+      "id": "uvuPs4iOQ3Lq",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "heatmap_data.corr()"
+      ],
+      "metadata": {
+        "id": "BkBNFP5xRttG"
+      },
+      "id": "BkBNFP5xRttG",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "colormap = plt.cm.BuGn\n",
+        "plt.figure(figsize=(10,8))\n",
+        "plt.title('Pearson Correlation of features', y=1.05, size=15)\n",
+        "sns.heatmap(heatmap_data.astype(float).corr(), linewidths=0.1, vmax=1.0, \n",
+        "            cmap=colormap, linecolor='white', annot=True, annot_kws={'size':16}, fmt=\".2f\")"
+      ],
+      "metadata": {
+        "id": "JDtArftTRxI8"
+      },
+      "id": "JDtArftTRxI8",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "o2cuW9l-Sy6c"
+      },
+      "id": "o2cuW9l-Sy6c",
       "execution_count": null,
       "outputs": []
     }
